<?xml version="1.0" encoding="utf-8"?>

<!--34px-->
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="Hello World!"
        app:cardCornerRadius="50px"
        app:cardElevation="10px"
        android:layout_margin="34px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:paddingTop="140px"
            android:orientation="vertical">
        <ImageView android:layout_width="160px"
                   android:layout_height="160px"
                   android:src="@mipmap/ic_launcher"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="30px"
                  android:textSize="50px"
                  android:textStyle="bold"
                  android:textColor="@color/colorOrange"
                  android:text="@string/main_desc"/>

        <TextView android:layout_width="wrap_content"
                  android:textStyle="bold"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="94px"
                  android:textColor="@color/colorOrange"
                  android:textSize="64px"
                  android:text="@string/main_welcome"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textStyle="bold"
                  android:layout_marginTop="56px"
                  android:textSize="64px"
                  android:textColor="@color/colorOrange"
                  android:text="@string/main_tips_first"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textStyle="bold"
                  android:textColor="@color/colorRed"
                  android:textSize="64px"
                  android:layout_marginTop="50px"
                  android:text="@string/main_tips_second"/>

    </LinearLayout>

</android.support.v7.widget.CardView>