<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorOrange"
        tools:context=".GoodsActivity">

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="50px"
            app:cardElevation="10px"
            android:layout_margin="34px"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="60px"
                    android:padding="40px"
                    android:layout_height="wrap_content">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/goods_type"
                        android:textSize="60px"
                        android:layout_weight="3"
                        android:textColor="@color/colorBlack"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:textSize="60px"
                        android:layout_height="wrap_content"
                        android:text="@string/goods_number"
                        android:textColor="@color/colorBlack"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:textSize="60px"
                        android:gravity="end"
                        android:layout_height="wrap_content"
                        android:text="@string/goods_price"
                        android:textColor="@color/colorBlack"/>

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_goods_data"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:scrollbars="vertical"
                    android:layout_height="0dp"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100px">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="待支付:4种"
                        android:layout_weight="1"
                        android:textColor="@color/colorBlack"
                        android:textSize="60px"
                />

                <TextView
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="待支付金额:40元"
                        android:textColor="@color/colorBlack"
                        android:textSize="60px"
                />
            </LinearLayout>

            <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/dp_10"
                    android:layout_marginBottom="@dimen/dp_10">
                <LinearLayout
                        android:layout_width="match_parent"
                        android:background="@color/colorOrange"
                        android:paddingLeft="100px"
                        android:paddingRight="100px"
                        android:paddingTop="10px"
                        android:paddingBottom="10px"
                        android:layout_height="wrap_content">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/drawable_rect"
                            android:text="@string/goods_tips_first"
                            android:gravity="center_vertical"
                            android:textColor="@color/colorBlack"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:drawableLeft="@drawable/drawable_rect"
                            android:text="@string/goods_tips_second"
                            android:textColor="@color/colorBlack"/>

                    <TextView
                            android:layout_weight="1"
                            android:drawableLeft="@drawable/drawable_rect"
                            android:layout_width="wrap_content"
                            android:gravity="center_vertical"
                            android:layout_height="wrap_content"
                            android:text="@string/goods_tips_third"
                            android:textColor="@color/colorBlack"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>